# feldera

./: Earthfile  openapi.json
benchmark/: run-nexmark.sh
benchmark/feldera-sql/: run.py
crates/adapters/src/controller/: mod.rs
crates/adapters/src/server/: mod.rs
crates/adapters/src/static_compile/: catalog.rs
crates/adapters/src/test/: mod.rs
crates/adapters/src/transport/: file.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/assets/: PARTS.csv  VENDOR.csv
crates/cli/src/: assets.rs  bench.rs  build.rs  init.rs  main.rs  run.rs  test.rs  types.rs
crates/cli/src/assets/: Cargo.toml.template  PRICE.csv  config.json  main.rs.template  mod.rs  project.sql
crates/dbsp/: Cargo.toml
crates/dbsp/src/circuit/: checkpointer.rs  circuit_builder.rs  dbsp_handle.rs  fingerprinter.rs  mod.rs  operator_traits.rs  runtime.rs
crates/dbsp/src/operator/: count.rs  distinct.rs  input.rs  input_upsert.rs  join.rs  mod.rs  neighborhood.rs  output.rs  recursive.rs  sample.rs  semijoin.rs  sum.rs  trace.rs  upsert.rs
crates/dbsp/src/time/: mod.rs  nested_ts32.rs  product.rs
crates/feldera-storage/: Cargo.toml
crates/feldera-storage/src/: lib.rs  test.rs
crates/pipeline-manager/: Cargo.toml
crates/pipeline-manager/src/: compiler.rs  integration_test.rs
crates/pipeline-types/: Cargo.toml
crates/pipeline-types/src/: lib.rs  program_schema.rs  schema.rs
crates/sqllib/: Cargo.toml
crates/sqllib/src/: lib.rs
deploy/: docker-compose.yml
docs/: what-is-feldera.md
docs/sql/: ad-hoc.md
docs/use_cases/fraud_detection/: fraud_detection.md
(+85 files in other folders)
