[package]
name = "feldera"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
once_cell = "1.18.0"
colored = "2.0"
pipeline_types = { path = "../pipeline-types/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
env_logger = "0.10.1"
log = "0.4.20"
console = { version = "0.15.7", features = [] }
prettytable-rs = "0.10.0"
similar = "2.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
